FAM-08 add styles in smartchoice section

--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,8 @@
     --black: #0000;
     --primary: #243168;
     --gray : #929292e5;
-    
+    --golden: #feda58;
+
     --container-gutter: 20px;
     --container-gutter-m: 30px;
     --container-gutter-l: 40px;
