--- a/css/home.css
+++ b/css/home.css
@@ -28,7 +28,89 @@
 
 .banner__button button:hover {
     color: var(--white);
-    background-color: #c83232;
+    background-color: #c83232;   
+}
+
+/* SMARTCHOICE SECTION */
+.smartchoice {
+    padding: 40px 0;
+}
+.smartchoice__image {
+    margin: 20px 0;
+}
+
+.smartchoice_title {
+    text-align: center;
+    margin: 30px 0;
+}
+
+.smartchoice_title h1 {
+    font-size: 48px;
+    font-weight: 600;
+    text-transform: uppercase;
+    color: var(--primary);
+    margin: 10px 0;
+}
+
+.smartchoice__title h4 {
+    font-size: 24px;
+    color: var(--primary);
+}
+
+.smartchoice__single {
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
+}
+
+.smartchoice__heading h3 {
+    text-transform: capitalize;
+    font-size: 18px;
+    margin: 10px 0
+}
+
+.smartchoice__detail {
+    margin-top: 20px;
+    text-align: center;
+    transition: 0.5s;
+}
+
+.smartchoice__button {
+    visibility: hidden;
+    transition: 0.5s;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.smartchoice__button a {
+    width: 50%;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-around;
+    align-items: center;
+    border: 1px solid var(--golden);
+    border-radius: 20px;
+    padding: 10px 20px;
+    transition: 0.5s;
+}
+
+.smartchoice__button p{
+    margin: 0;
+}
+
+.smartchoice__single:hover .smartchoice__button {
+    visibility: visible;
     
 }
 
+.smartchoice__single:hover .smartchoice__detail {
+    margin-top: 10px;
+}
+
+.smartchoice__button a:hover {
+    background-color: var(--golden);
+    border: none;
+}
