--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,7 @@
     --primary: #243168;
     --gray : #929292e5;
     --golden: #feda58;
+    --red: #a42e2e;
 
     --container-gutter: 20px;
     --container-gutter-m: 30px;
