--- a/css/styles.css
+++ b/css/styles.css
@@ -2,9 +2,10 @@
     --white: #ffff;
     --black: #0000;
     --primary: #243168;
-    --gray : #929292e5;
+    --gray : #727272;
     --golden: #feda58;
     --red: #a42e2e;
+   
 
     --container-gutter: 20px;
     --container-gutter-m: 30px;
