--- a/css/home.css
+++ b/css/home.css
@@ -456,8 +456,6 @@
     }
 }
 
-
-
 @keyframes rotate-div {
     0% {
     transform:  rotateX(270deg);
@@ -470,3 +468,354 @@
        
     }
 }
+
+
+/* GALLERY SECTION */
+
+.gallery__container {
+    display: grid;
+    grid-template-columns: auto auto auto auto auto auto auto;
+    align-content: center;
+    gap: 2px;
+
+    & .gallery__content:nth-child(3) {
+        grid-row: 1 / 3;
+        grid-column: 3 /5 ;
+    }
+
+    & .gallery__content {
+        width: 100%;
+        height: 200px;
+        position: relative;
+    }
+
+    & .gallery__content:nth-child(1) {
+        background: url(../assets/images/gallery/img-gallery-1.jpg) no-repeat;
+        background-size: cover;
+
+        &:hover {
+            background: url(../assets/images/gallery/img-gallery-2.jpg) no-repeat;
+            background-size: cover;
+        }
+
+        &:hover a {
+            display: flex;
+            animation: fade-in-div linear 0.5s;
+        }
+    }
+
+    & .gallery__content:nth-child(2) {
+        background: url(../assets/images/gallery/img-gallery-2.jpg) no-repeat;
+        background-size: cover;
+
+        &:hover {
+            background: url(../assets/images/gallery/img-gallery-3.jpg) no-repeat;
+            background-size: cover;
+        }
+
+        &:hover a {
+            display: flex;
+            animation: fade-in-div linear 0.5s;
+        }
+    }
+
+    & .gallery__content:nth-child(3) {
+        background: url(../assets/images/gallery/img-gallery-3.jpg) no-repeat;
+        background-size: cover;
+        height: 400px;
+
+        &:hover {
+            background: url(../assets/images/gallery/img-gallery-4.jpg) no-repeat;
+            background-size: cover;
+        }
+
+        &:hover a {
+            display: flex;
+            animation: fade-in-div linear 0.5s;
+        }
+    }
+
+    & .gallery__content:nth-child(4) {
+        background: url(../assets/images/gallery/img-gallery-4.jpg) no-repeat;
+        background-size: cover;
+
+        &:hover {
+            background: url(../assets/images/gallery/img-gallery-5.jpg) no-repeat;
+            background-size: cover;
+        }
+
+        &:hover a {
+            display: flex;
+            animation: fade-in-div linear 0.5s;
+        }
+    }
+
+    & .gallery__content:nth-child(5) {
+        background: url(../assets/images/gallery/img-gallery-5.jpg) no-repeat;
+        background-size: cover;
+
+        &:hover {
+            background: url(../assets/images/gallery/img-gallery-6.jpg) no-repeat;
+            background-size: cover;
+        }
+
+        &:hover a {
+            display: flex;
+            animation: fade-in-div linear 0.5s;
+        }
+    }
+
+    & .gallery__content:nth-child(6) {
+        background: url(../assets/images/gallery/img-gallery-6.jpg) no-repeat;
+        background-size: cover;
+
+        &:hover {
+            background: url(../assets/images/gallery/img-gallery-7.jpg) no-repeat;
+            background-size: cover;
+        }
+
+        &:hover a {
+            display: flex;
+            animation: fade-in-div linear 0.5s;
+        }
+    }
+
+    & .gallery__content:nth-child(7) {
+        background: url(../assets/images/gallery/img-gallery-7.jpg) no-repeat;
+        background-size: cover;
+
+        &:hover {
+            background: url(../assets/images/gallery/img-gallery-1.jpg) no-repeat;
+            background-size: cover;
+        }
+
+        &:hover a {
+            display: flex;
+            animation: fade-in-div linear 0.5s;
+        }
+    }
+
+    & .gallery__content:nth-child(8) {
+        background: url(../assets/images/gallery/img-gallery-1.jpg) no-repeat;
+        background-size: cover;
+
+        &:hover {
+            background: url(../assets/images/gallery/img-gallery-3.jpg) no-repeat;
+            background-size: cover;
+        }
+
+        &:hover a {
+            display: flex;
+            animation: fade-in-div linear 0.5s;
+        }
+    }
+
+    & .gallery__content:nth-child(9) {
+        background: url(../assets/images/gallery/img-gallery-2.jpg) no-repeat;
+        background-size: cover;
+
+        &:hover {
+            background: url(../assets/images/gallery/img-gallery-4.jpg) no-repeat;
+            background-size: cover;
+        }
+
+        &:hover a {
+            display: flex;
+            animation: fade-in-div linear 0.5s;
+        }
+    }
+
+    & .gallery__content:nth-child(10) {
+        background: url(../assets/images/gallery/img-gallery-3.jpg) no-repeat;
+        background-size: cover;
+
+        &:hover {
+            background: url(../assets/images/gallery/img-gallery-5.jpg) no-repeat;
+            background-size: cover;
+        }
+
+        &:hover a {
+            display: flex;
+            animation: fade-in-div linear 0.5s;
+        }
+    }
+
+    & .gallery__content:nth-child(11) {
+        background: url(../assets/images/gallery/img-gallery-4.jpg) no-repeat;
+        background-size: cover;
+
+        &:hover {
+            background: url(../assets/images/gallery/img-gallery-6.jpg) no-repeat;
+            background-size: cover;
+        }
+
+        &:hover a {
+            display: flex;
+            animation: fade-in-div linear 0.5s;
+        }
+    }
+
+    & .gallery__content:nth-child(12) {
+        background: url(../assets/images/gallery/img-gallery-5.jpg) no-repeat;
+        background-size: cover;
+
+        &:hover {
+            background: url(../assets/images/gallery/img-gallery-7.jpg) no-repeat;
+            background-size: cover;
+        }
+
+        &:hover a {
+            display: flex;
+            animation: fade-in-div linear 0.5s;
+        }
+    }
+
+    & .gallery__content:nth-child(13) {
+        background: url(../assets/images/gallery/img-gallery-6.jpg) no-repeat;
+        background-size: cover;
+
+        &:hover {
+            background: url(../assets/images/gallery/img-gallery-1.jpg) no-repeat;
+            background-size: cover;
+        }
+
+        &:hover a {
+            display: flex;
+            animation: fade-in-div linear 0.5s;
+        }
+    }
+
+    & .gallery__content:nth-child(14) {
+        background: url(../assets/images/gallery/img-gallery-7.jpg) no-repeat;
+        background-size: cover;
+
+        &:hover {
+            background: url(../assets/images/gallery/img-gallery-2.jpg) no-repeat;
+            background-size: cover;
+        }
+
+        &:hover a {
+            display: flex;
+            animation: fade-in-div linear 0.5s;
+        }
+    }
+
+    & .gallery__content:nth-child(15) {
+        background: url(../assets/images/gallery/img-gallery-4.jpg) no-repeat;
+        background-size: cover;
+
+        &:hover {
+            background: url(../assets/images/gallery/img-gallery-3.jpg) no-repeat;
+            background-size: cover;
+        }
+
+        &:hover a {
+            display: flex;
+            animation: fade-in-div linear 0.5s;
+        }
+    }
+
+    & .gallery__content:nth-child(16) {
+        background: url(../assets/images/gallery/img-gallery-5.jpg) no-repeat;
+        background-size: cover;
+
+        &:hover {
+            background: url(../assets/images/gallery/img-gallery-4.jpg) no-repeat;
+            background-size: cover;
+        }
+
+        &:hover a {
+            display: flex;
+            animation: fade-in-div linear 0.5s;
+        }
+    }
+
+    & .gallery__content:nth-child(17) {
+        background: url(../assets/images/gallery/img-gallery-6.jpg) no-repeat;
+        background-size: cover;
+
+        &:hover {
+            background: url(../assets/images/gallery/img-gallery-5.jpg) no-repeat;
+            background-size: cover;
+        }
+
+        &:hover a {
+            display: flex;
+            animation: fade-in-div linear 0.5s;
+        }
+    }
+
+    & .gallery__content:nth-child(18) {
+        background: url(../assets/images/gallery/img-gallery-7.jpg) no-repeat;
+        background-size: cover;
+
+        &:hover {
+            background: url(../assets/images/gallery/img-gallery-6.jpg) no-repeat;
+            background-size: cover;
+        }
+
+        &:hover a {
+            display: flex;
+            animation: fade-in-div linear 0.5s;
+        }
+    }
+
+   
+
+    & a {
+        width: 100%;
+        display: none;
+        position: absolute;
+        bottom: 0;
+        height: 40px;
+        flex-flow: row nowrap;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
+        
+
+        & p {
+            background-color: var(--white);
+            opacity: 60%;
+            width: 75%;
+            height: 100%;
+            margin: 0;
+            padding: 10px 20px;
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            
+        }
+        
+        & i {            
+            background-color: var(--golden);
+            width: 25%;
+            height: 100%;
+            margin: 0;
+            padding: 10px 20px;
+            position: absolute;
+            bottom: 0;
+            right: 0;
+            
+        }
+
+        &:hover p {
+            opacity: 100%;
+        }
+    }
+
+}
+
+@keyframes fade-in-div {
+    0% {
+    transform:  translateY(100%);
+   
+    } 50% {
+    transform:  translateY(50%);
+    
+    } 100% {
+    transform:  translateY(0%);
+       
+    }
+}
+
