--- a/css/home.css
+++ b/css/home.css
@@ -982,3 +982,142 @@
         }
     }
 } 
+
+/* NEWS SECTION */
+
+.news__container {
+    position: relative;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
+    padding: 50px 0;
+
+    & .news__heading h1 {
+        color: var(--primary);
+        font-size: 24px;
+        font-weight: 700;
+    }
+
+    & .news__body {
+        display: flex;
+        flex-flow: column nowrap;
+        justify-content: center;
+        align-items: center;
+
+    }
+}
+
+.body__heading {
+    width: 100%;
+    margin: 10px 0;
+
+    & .body__title {
+        border: 1px solid var(--gray);
+        padding: 10px 10px;
+        text-align: center;
+        text-transform: uppercase;
+        font-size: 16px;
+        font-weight: 700;
+        color: var(--gray);
+        cursor: pointer;
+
+        & .body__detail-replace {
+            display: none;
+        }
+
+        
+    }   
+}
+
+.body__detail {
+    width: 100%;
+    margin: 10px 0;
+    overflow: hidden;
+
+    
+
+    & h3 {
+        position: relative;
+        padding-left: 10px;
+        margin: 10px 0;
+        font-size: 16px;
+        font-weight: 700;
+        color: var(--primary);
+        text-transform: uppercase;
+
+        & a::before {
+            position: absolute;
+            left: 0;
+            top: 5px;
+            content: "";
+            display: block;
+            width: 8px;
+            height: 8px;
+            border: 2px solid var(--primary);
+            border-radius: 4px;
+        }
+    }
+
+    & h6 {
+        color: var(--gray);
+
+        & a::hover {
+            color: var(--golden);
+        }
+    }
+
+    & p {
+        font-size: 14px;
+        color: var(--gray);
+        text-align: justify;
+    }
+
+    & .news__link {
+        position: relative;
+        margin-top: 15px;
+        text-align: center;
+        color: var(--primary);
+        cursor: pointer;
+        
+        &:hover {
+            color: var(--red);
+        }
+
+        & h5::after {
+            position: absolute;
+            top: 50%;
+            right: 40%;
+            content: "";
+            height: 1px;
+            width: 50px;
+            background-color: var(--primary);
+
+            
+        }
+
+        & h5::before {
+            position: absolute;
+            top: 50%;
+            left: 40%;
+            content: "";
+            height: 1px;
+            width: 50px;
+            background-color: var(--primary);
+
+        }
+
+        & h5:hover::before,h5:hover::after{
+            background-color: var(--red);
+        }
+
+        
+    }
+
+    
+}
+
+.active {
+    animation: fade-in-div 0.5s linear;
+}
+
