FAM-20 add styles for footer section

--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,7 @@
     --golden: #feda58;
     --red: #a42e2e;
     --light-gray: #f5eeee;
+    --medium-gray: #dbdbdb;  
    
 
     --container-gutter: 20px;
