update animation in news section

--- a/css/home.css
+++ b/css/home.css
@@ -809,12 +809,15 @@
 @keyframes fade-in-div {
     0% {
     transform:  translateY(100%);
+    opacity: 0;
    
     } 50% {
     transform:  translateY(50%);
+    opacity: 0;
     
     } 100% {
     transform:  translateY(0%);
+    opacity: 1;
        
     }
 }
@@ -1114,10 +1117,11 @@
         
     }
 
-    
 }
 
-.active {
+.focus {
     animation: fade-in-div 0.5s linear;
 }
+
+
 
