--- a/css/navbar.css
+++ b/css/navbar.css
@@ -26,8 +26,16 @@
     font-size: 16px;
     border: none;
    
-   
+   &:hover .dropdown__title {
+    color: gold;
+   }
+
+   &:hover .dropdown__menu {
+    visibility: visible;
+   }
 }
+
+
 
 .dropdown__title {
     text-decoration: none;
@@ -35,21 +43,97 @@
 }
 
 .dropdown__menu {
-    visibility: hidden;
     position: absolute;
-    background-color: #515151;
-    min-width: 160px;
+    top:60px;
+    left: 0;
+    visibility: hidden;
+    background-color: var(--white);
+    color: var(--primary);
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
 }
-.dropdown:hover .dropdown{
-    border-bottom: 10px solid var(--primary);
-}
 
-.dropdown:hover .dropdown__title {
-    color: gold;
-}
+.megamenu {
+    max-width: max-content;
+    min-width: 1000px;
+    padding: 20px;
+    margin: 0;
 
-.dropdown:hover .dropdown__menu {
-    visibility: visible;
+    & a {
+        text-decoration: none;
+    }
+
+    & .megamenu__list {
+        display: flex;
+        flex-flow: row wrap;
+        width: 100%;
+        padding: 20px;
+        text-align: left;
+        
+
+        .megamenu__logo-left {
+            width: 100%;
+            padding: 10px 0 10px 50px;            
+            background: url(../assets/images/ico-skinrebon.png) no-repeat 10px center;
+
+            & h2 {
+                margin: 0;
+                color: var(--primary);
+                font-size: 20px;
+                font-weight: 700;
+            }
+        }
+
+        .megamenu__logo-right {
+            width: 100%;
+            padding: 10px 0 10px 50px;            
+            background: url(../assets/images/ico-dichvuphauthuat.png) no-repeat 10px center;
+
+            & h2 {
+                margin: 0;
+                color: var(--primary);
+                font-size: 20px;
+                font-weight: 700;
+            }
+        }
+
+
+
+        & .megamenu__title {
+            width: 100%;
+            display: flex;
+            flex-flow: column wrap;
+            float: left;
+            list-style: circle;
+            
+            & a {
+                color: var(--black);
+            }
+            
+            & .megamenu__heading {
+                width: 100%;
+                padding: 10px 0;
+
+                &:hover b{
+                    color: var(--primary);
+                }
+                
+                & ul {
+                    width: 100%;
+                    padding: 0;
+                    list-style: none;
+                }
+
+                & li {
+                    padding: 5px 0;
+
+                    &:hover a {
+                        color: var(--primary);
+                    }
+                }
+
+            }
+        }
+    }
+
 }
