--- a/css/footer.css
+++ b/css/footer.css
@@ -117,7 +117,7 @@
 
 
 .footer__digital {
-    padding: 20px 0 30px 0;
+    padding: 20px 0 50px 0;
 
     & .digital__copyright {
         text-align: left;
@@ -133,9 +133,10 @@
     }
 
     & .digital__socialmedia {
+        width: 100%;
         display: flex;
         flex-flow: row nowrap;
-        justify-content: space-around;
+        justify-content: space-evenly;
         align-items: center;
         text-align: center;
     
