--- a/css/styles.css
+++ b/css/styles.css
@@ -26,6 +26,7 @@ html {
     scroll-behavior: smooth;
   }
 body {
+    
     font-size:13px;
     color: #222222;
     font-weight:400;
@@ -34,6 +35,7 @@ body {
     font-family: 'Open Sans',  sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    overflow-x: hidden;
 }
 
 .navigation {
