--- a/css/home.css
+++ b/css/home.css
@@ -485,7 +485,7 @@
 
     & .gallery__content {
         width: 100%;
-        
+        height: 200px;
         position: relative;
     }
 
@@ -813,7 +813,7 @@
    
     } 50% {
     transform:  translateY(50%);
-    opacity: 0;
+    opacity: 0.5;
     
     } 100% {
     transform:  translateY(0%);
