--- a/css/navbar.css
+++ b/css/navbar.css
@@ -165,6 +165,7 @@
 .dropdown__title {
     text-decoration: none;
     color: var(--white);
+    font-size: 16px;
 }
 
 .dropdown__menu {
@@ -176,6 +177,18 @@
     color: var(--primary);
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
+}
+
+.singlemenu {
+    width: 100%;
+    
+    padding: 10px ;
+    list-style: circle;
+
+    & li {
+        margin-left: 20px;
+        padding: 10px 0;
+    }
 }
 
 .megamenu {
