--- a/css/navbar.css
+++ b/css/navbar.css
@@ -166,6 +166,10 @@
     text-decoration: none;
     color: var(--white);
     font-size: 16px;
+
+    &:hover {
+        color: var(--golden);
+    }
 }
 
 .dropdown__menu {
