FAM-28 update effect hover in header_socialmedia

--- a/css/header.css
+++ b/css/header.css
@@ -83,8 +83,16 @@
         flex-flow: row nowrap;
         justify-content: space-evenly;
         align-items: center;
-        color: var(--gray);
-        font-size: 15px;
+
+        & i {
+            color: var(--gray);
+            font-size: 15px;
+        }
+
+        & i:hover {
+            color: var(--black);
+        }
+        
     }
 
     & .header__smallnav {
