--- a/css/home.css
+++ b/css/home.css
@@ -91,17 +91,16 @@
 }
 
 .smartchoice_title {
-    text-align: center;
     margin: 30px 0;
+    text-align: center;
 }
 
 .smartchoice_title h1 {
+    margin: 10px 0;
     font-size: 48px;
-    font-weight: 700;
-    
+    font-weight: 700;    
     text-transform: uppercase;
     color: var(--primary);
-    margin: 10px 0;
 }
 
 .smartchoice__title h4 {
@@ -116,12 +115,12 @@
 }
 
 .smartchoice__button {
-    visibility: hidden;
-    transition: 0.3s;
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
+    visibility: hidden;
+    transition: 0.3s;
 }
 
 .smartchoice__single {
@@ -140,9 +139,9 @@
 }
 
 .smartchoice__heading h3 {
+    margin: 10px 0;
     text-transform: capitalize;
     font-size: 18px;
-    margin: 10px 0
 }
 
 .smartchoice__button a {
@@ -151,9 +150,9 @@
     flex-flow: row nowrap;
     justify-content: space-around;
     align-items: center;
+    padding: 10px 20px;
     border: 1px solid var(--golden);
     border-radius: 20px;
-    padding: 10px 20px;
     transition: 0.5s;
     cursor: pointer;
 
@@ -178,6 +177,10 @@
 
     .smartchoice__content p {
         font-size: 14px;
+    }
+
+    .smartchoice__button a {
+        width: 35%;
     }
 }
 
